Somehow fixed the animation on mobile

--- a/rauha/css/base.css
+++ b/rauha/css/base.css
@@ -87,7 +87,7 @@ a:focus {
 }
 
 .content__title {
-	position: relative;
+	position: absolute;
 	top: 50%;
 	left: 0;
 	width: 100%;
